--- a/Assembly-CSharp.LadybugTestMod.mm/Assembly-CSharp.LadybugTestMod.mm.csproj
+++ b/Assembly-CSharp.LadybugTestMod.mm/Assembly-CSharp.LadybugTestMod.mm.csproj
@@ -68,6 +68,7 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\references\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base.cs" />
