Adding foundation work for loading our own xml files, and cleaning up code a bit
All path related stuff is now in PathMan (.exe). I'm definitely going to try and make as many
guys take the form ____Man.EXE now

--- a/Assembly-CSharp.LadybugTestMod.mm/Assembly-CSharp.LadybugTestMod.mm.csproj
+++ b/Assembly-CSharp.LadybugTestMod.mm/Assembly-CSharp.LadybugTestMod.mm.csproj
@@ -73,6 +73,10 @@
   <ItemGroup>
     <Compile Include="Base.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="PathMan.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="InitialAnimClipXml.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
