--- a/Assembly-CSharp.LadybugTestMod.mm/Assembly-CSharp.LadybugTestMod.mm.csproj
+++ b/Assembly-CSharp.LadybugTestMod.mm/Assembly-CSharp.LadybugTestMod.mm.csproj
@@ -69,6 +69,9 @@
       <HintPath>..\..\references\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="TextMeshPro-1.0.55.56.0b12">
+      <HintPath>..\..\references\TextMeshPro-1.0.55.56.0b12.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base.cs" />
